# gazelle-dinov3

./: .gitignore  README.md  README_architecture.md  README_distill.md  benchmark.sh  benchmark_tensorrt.sh  export_onnx.py  hubconf.py  pyproject.toml
benchmark/: benchmark_times_gazelle_dinov3_vit_tiny_1x3x640x640_1xNx4.csv  benchmark_times_gazelle_dinov3_vit_tinyplus_1x3x640x640_1xNx4.csv  benchmark_times_gazelle_dinov3_vitb16_1x3x640x640_1xNx4.csv  benchmark_times_gazelle_dinov3_vits16_1x3x640x640_1xNx4.csv  benchmark_times_gazelle_dinov3_vits16plus_1x3x640x640_1xNx4.csv  benchmark_times_gazelle_hgnetv2_atto_distill_1x3x320x320_1xNx4.csv  benchmark_times_gazelle_hgnetv2_femto_distill_1x3x416x416_1xNx4.csv  benchmark_times_gazelle_hgnetv2_n_distill_1x3x640x640_1xNx4.csv  benchmark_times_gazelle_hgnetv2_pico_distill_1x3x640x640_1xNx4.csv
data_prep/: preprocess_gazefollow.py
gazelle/: backbone.py  dataloader.py  model.py  utils.py
scripts/: eval_gazefollow.py  eval_vat.py  train_gazefollow.py  train_vat.py
